--- a/project1/Makefile
+++ b/project1/Makefile
@@ -1,23 +1,23 @@
 EXEC = pseudoshell
-FLAGS = -g -o
+FLAGS = -g
 CC = gcc
 
 all: $(EXEC)
 
 $(EXEC): main.o string_parser.o command.o
-	$(CC) -o $@ $^
+	$(CC) $(FLAGS) -o $@ $^
 
 main.o: main.c
-	$(CC) -c $^
+	$(CC) $(FLAGS) -c $<
 
-%.o: %.c %.h
-	$(CC) -c $< 
+# %.o: %.c %.h
+# 	$(CC) $(FLAGS) -c $< 
 
 string_parser.o: string_parser.c string_parser.h
-	$(CC) -c $<
+	$(CC) $(FLAGS) -c $<
 
 command.o: command.c command.h
-	$(CC) -c $<
+	$(CC) $(FLAGS) -c $<
 
 clean:
 	rm -f *.o $(EXEC)
