update lab4 makefile

--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -1,10 +1,13 @@
+CC = gcc
+CFLAGS = -Wall
+
 all: lab4 iobound
 
 lab4: lab4.c
-	gcc lab4.c -o lab4
+	$(CC) $(CFLAGS) lab4.c -o lab4
 
 iobound: iobound.c
-	gcc iobound.c -o iobound
+	$(CC) $(CFLAGS) iobound.c -o iobound
 
 clean:
-	rm lab4 iobound
+	rm -f lab4 iobound
