--- a/ex_exec/Makefile
+++ b/ex_exec/Makefile
@@ -4,11 +4,11 @@ FLAGS = -g
 
 all: $(EXEC) signal iobound
 
-$(EXEC): part1.o string_parser.o
+$(EXEC): string_parser.o
 	$(CC) $(FLAGS) -o $@ $^
 
-part1.o: part1.c string_parser.h
-	$(CC) $(FLAGS) -c $<
+# part1.o: string_parser.h
+# 	$(CC) $(FLAGS) -c $<
 
 string_parser.o: string_parser.c string_parser.h
 	$(CC) $(FLAGS) -c $<
