--- a/ex_exec/Makefile
+++ b/ex_exec/Makefile
@@ -2,16 +2,16 @@ EXEC = project2
 CC = gcc
 FLAGS = -g
 
-all: $(EXEC) signal iobound
+all: signal iobound
 
-$(EXEC): string_parser.o
-	$(CC) $(FLAGS) -o $@ $^
+# $(EXEC): string_parser.o
+# 	$(CC) $(FLAGS) -o $@ $^
 
 # part1.o: string_parser.h
 # 	$(CC) $(FLAGS) -c $<
 
-string_parser.o: string_parser.c string_parser.h
-	$(CC) $(FLAGS) -c $<
+# string_parser.o: string_parser.c string_parser.h
+# 	$(CC) $(FLAGS) -c $<
 
 signal: signal.c
 	$(CC) $(FLAGS) -o signal signal.c
@@ -20,4 +20,4 @@ iobound: iobound.c
 	$(CC) $(FLAGS) -o iobound iobound.c
 
 clean:
-	rm -f *.o $(EXEC) signal iobound
+	rm -f *.o signal iobound
