--- a/project2/Makefile
+++ b/project2/Makefile
@@ -1,8 +1,8 @@
-EXEC = part1
+EXEC = part1 part2 part3 part4
 CC = gcc
 FLAGS = -g
 
-all: $(EXEC) signal iobound cpubound
+all: $(EXEC) iobound cpubound
 
 $(EXEC): part1.o string_parser.o
 	$(CC) $(FLAGS) -o $@ $^
@@ -10,11 +10,20 @@ $(EXEC): part1.o string_parser.o
 part1.o: part1.c string_parser.h
 	$(CC) $(FLAGS) -c $<
 
-string_parser.o: string_parser.c string_parser.h
+part2.o: part2.c string_parser.h
 	$(CC) $(FLAGS) -c $<
 
-signal: signal.c
-	$(CC) $(FLAGS) -o signal signal.c
+part3.o: part3.c string_parser.h
+	$(CC) $(FLAGS) -c $<
+
+part4.o: part4.c string_parser.h
+	$(CC) $(FLAGS) -c $<
+
+# part5.o: part5.c string_parser.h
+# 	$(CC) $(FLAGS) -c $<
+
+string_parser.o: string_parser.c string_parser.h
+	$(CC) $(FLAGS) -c $<
 
 iobound: iobound.c
 	$(CC) $(FLAGS) -o iobound iobound.c
@@ -23,4 +32,4 @@ cpubound: cpubound.c
 	$(CC) $(FLAGS) -o cpubound cpubound.c
 
 clean:
-	rm -f *.o $(EXEC) signal iobound cpubound
+	rm -f *.o $(EXEC) iobound cpubound
