--- a/project2/Makefile
+++ b/project2/Makefile
@@ -1,35 +1,23 @@
-EXEC = part1 part2 part3 part4
+EXEC = part1 part2 part3 part4 # part5
 CC = gcc
-FLAGS = -g
+CFLAGS = -g
 
 all: $(EXEC) iobound cpubound
 
-$(EXEC): part1.o string_parser.o
-	$(CC) $(FLAGS) -o $@ $^
+part%: part%.o string_parser.o
+	$(CC) $(CFLAGS) -o $@ $^
 
-part1.o: part1.c string_parser.h
-	$(CC) $(FLAGS) -c $<
-
-part2.o: part2.c string_parser.h
-	$(CC) $(FLAGS) -c $<
-
-part3.o: part3.c string_parser.h
-	$(CC) $(FLAGS) -c $<
-
-part4.o: part4.c string_parser.h
-	$(CC) $(FLAGS) -c $<
-
-# part5.o: part5.c string_parser.h
-# 	$(CC) $(FLAGS) -c $<
+part%.o: part%.c string_parser.h
+	$(CC) $(CFLAGS) -c $<
 
 string_parser.o: string_parser.c string_parser.h
-	$(CC) $(FLAGS) -c $<
+	$(CC) $(CFLAGS) -c $<
 
 iobound: iobound.c
-	$(CC) $(FLAGS) -o iobound iobound.c
+	$(CC) $(CFLAGS) -o $@ $<
 
 cpubound: cpubound.c
-	$(CC) $(FLAGS) -o cpubound cpubound.c
+	$(CC) $(CFLAGS) -o $@ $<
 
 clean:
 	rm -f *.o $(EXEC) iobound cpubound
